<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/line_divider"
    >
    <include layout="@layout/include_top_gray"/>

    <include layout="@layout/space_15_height"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            style="@style/TextView_Main_black"
            android:text="@string/phone_number"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/normal_margin"/>

        <EditText
            android:maxLength="11"
            style="@style/EditText"
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:inputType="number"
            android:background="@null"
            android:textSize="16sp"
            android:singleLine="true"
            android:hint="@string/enter_phone_number"/>

    </RelativeLayout>

    <include layout="@layout/space_1_height"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            style="@style/TextView_Main_black"
            android:text="@string/identify_code"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/normal_margin"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/et_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:background="@null"
            android:inputType="number"
            android:textSize="16sp"
            android:singleLine="true"
            android:hint="@string/enter_identify_code"/>

        <Button
            android:id="@+id/btn_sendSmsCode"
            android:layout_width="65dp"
            android:layout_height="@dimen/main_btn_height"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/normal_margin"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_main_bigbtn_bg"
            android:textColor="@color/white"
            android:textSize="@dimen/main_gray_TextSize"
            android:text="@string/get_identify_code"/>

    </RelativeLayout>

    <include layout="@layout/space_15_height"/>





    <include layout="@layout/space_1_height"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            style="@style/TextView_Main_black"
            android:text="@string/activity_reset_pwd"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/normal_margin"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/et_newPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:inputType="numberPassword"
            android:background="@null"
            android:textSize="16sp"
            android:maxLength="12"
            android:maxLines="1"
            android:hint="@string/activity_enter_reset_pwd"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_resetConfirm"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:text="@string/activity_reset_btn"
        android:textColor="@color/white"
        android:background="@drawable/selector_main_bigbtn_bg"
        android:textSize="18sp"/>
</LinearLayout>
